# amplifier-module-tool-m365

./: README.md  pyproject.toml
amplifier_module_tool_m365/: __init__.py
amplifier_module_tool_m365/providers/: __init__.py  m365.py
