[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-module-tool-m365"
version = "1.0.0"
description = "Microsoft 365 collaboration module for Amplifier - Teams, SharePoint, Outlook, Planner"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Michael Jabbour" }
]
keywords = ["amplifier", "collaboration", "m365", "microsoft", "teams", "sharepoint", "outlook"]

dependencies = [
    "amplifier-module-tool-collab-core>=1.0.0",
    "httpx>=0.27.0",
    "azure-identity>=1.15.0",
    "msgraph-sdk>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.entry-points."amplifier.modules"]
tool-m365 = "amplifier_module_tool_m365:mount"

[project.urls]
Homepage = "https://github.com/michaeljabbour/amplifier-module-tool-m365"
Repository = "https://github.com/michaeljabbour/amplifier-module-tool-m365"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_m365"]
